# sltbench

./: .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.rst  README.md  appveyor.yml  sltbench-config.cmake  sltbench-config.cmake.in
cmake/: sanitizers.cmake
doc/: advanced user guide.md  advanced_user_guide.md  build.md  commandlineoptions.md  compare_results.md  examples.md  howto_analyze_results.md  howtobenchmark.md
examples/: CMakeLists.txt  custom_reporter.cpp  demo.cpp  function_with_args.cpp  function_with_args_generator.cpp  function_with_exception.cpp  function_with_fixture.cpp  function_with_fixture_and_args.cpp  function_with_fixture_and_args_generator.cpp  function_with_fixture_and_lazy_args_generator.cpp  function_with_fixture_builder.cpp  function_with_fixture_builder_and_args.cpp  function_with_fixture_builder_and_args_generator.cpp  function_with_fixture_builder_and_lazy_args_generator.cpp  function_with_lazy_args_generator.cpp  main.cpp  simple_function.cpp
include/sltbench/: Bench.h  BenchCore.h
include/sltbench/impl/: BenchApi.h  BenchCoreApi.h  BenchmarkWithArgGenerator.h  BenchmarkWithFixture.h  BenchmarkWithFixtureAndArgGenerator.h  BenchmarkWithFixtureAndLazyArgGenerator.h  BenchmarkWithFixtureBuilder.h  BenchmarkWithFixtureBuilderAndArgGenerator.h  BenchmarkWithFixtureBuilderAndLazyArgGenerator.h  BenchmarkWithLazyArgGenerator.h  Benchmark_AG.h  Benchmark_F.h  Benchmark_FB.h  Benchmark_FB_AG.h  Benchmark_FB_LAG.h  Benchmark_F_AG.h  Benchmark_F_LAG.h  Benchmark_LAG.h  BenchmarksContainer.h  Descriptor.h  DoNotOptimize.h  Env.h  IBenchmark.h  IConfig.h  IFilter.h  IMeasureAlgo.h  IReporter.h  IRunner.h  Optional.h  RunWarnings.h  StaticAssertsUtil.h  StopGenerationException.h  Verdict.h
src/: Algorithms.h  BenchApi.cpp  BenchmarksContainer.cpp  BenchmarksContainerPrivate.h  CMakeLists.txt  Config.cpp  Config.h  ConsoleReporter.cpp  ConsoleReporter.h  CsvReporter.cpp  CsvReporter.h  DoNotOptimize.cpp  Env.cpp  EnvImpl.h  Filters.cpp  Filters.h  IBenchmark.cpp  IFilter.h  JsonReporter.cpp  JsonReporter.h  MAResultsContainer.cpp  MAResultsContainer.h  MeasureAlgo.cpp  MeasureAlgo.h  ProcedureBenchmark.cpp  ProcedureBenchmark.h  ProgramOptions.cpp  ProgramOptions.h  Reporters.cpp  Reporters.h  Runner.cpp  Runner.h  SingleMeasureAlgo.cpp  SingleMeasureAlgo.h  SysInfo.cpp  SysInfo.h  Verdict.cpp  WarningsMessages.cpp  WarningsMessages.h
tests/: BenchmarkWithArgGeneratorTest.cpp  BenchmarkWithFixtureAndArgGeneratorTest.cpp  BenchmarkWithFixtureAndLazyArgGeneratorTest.cpp  BenchmarkWithFixtureBuilderTest.cpp  BenchmarkWithFixtureTest.cpp  BenchmarkWithLazyArgGeneratorTest.cpp  Benchmark_AG_Test.cpp  Benchmark_FB_AG_Test.cpp  Benchmark_FB_LAG_Test.cpp  Benchmark_FB_Test.cpp  Benchmark_F_AG_Test.cpp  Benchmark_F_LAG_Test.cpp  Benchmark_F_Test.cpp  Benchmark_LAG_Test.cpp  CMakeLists.txt  FiltersTest.cpp  MAResultsContainerTest.cpp  MeasureAlgoTest.cpp  OptionalTest.cpp  ProcedureBenchmarkTest.cpp  ProgramOptionsTest.cpp  RunnerTest.cpp  SingleMeasureAlgoTest.cpp  TestAlgorithms.h  main.cpp
tools/autolearning/: CMakeLists.txt  Samples.cpp  main.cpp
tools/benchcompile/: benchcompile.py
tools/benchcompile/impl/: __init__.py  backend.py  benchcc.py  codegen.py  dataset.py  toolset.py
tools/compare/: main.py
tools/histogrammer/: CMakeLists.txt  HistogramBuilder.cpp  HistogramBuilder.h  main.cpp
tools/metrics/: README.md
tools/metrics/benchbench/: benchbench.py  main.py
tools/metrics/benchbench/impl/: __init__.py  backend.py  benchcc.py  codegen.py  dataset.py  reports.py
tools/metrics/benchcompile/: README.md  benchcompile.py  main.py
tools/metrics/benchcompile/impl/: backend.py  benchcc.py  codegen.py  dataset.py
tools/metrics/utils/: backend.py  buildsystem.py  cmakegen.py  fs.py  parsers.py
